fixed login mobile gap

--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -4,7 +4,7 @@
   align-items: flex-start;
   justify-content: center;
   justify-items: center;
-  row-gap: 2rem;
+  gap: 1rem;
 
   padding: 6rem 2rem;
 
